<resources>
    <string name="app_name">TextBottonNav</string>

    <!--搜索框-->
    <string name="app_label">校园集市</string>
    <string name="search_hint">搜索</string>

    <!--菜单-->
    <string name="home_name">首页</string>
    <string name="secord_home_name">失物</string>
    <string name="send_name">发布</string>
    <string name="message_name">消息</string>
    <string name="my_name">我的</string>

    <!--登陆界面-->
    <string name="login">登 陆</string>
    <string name="register">注册新用户</string>
    <string name="username">输入账号</string>
    <string name="password">输入密码</string>
    <string name="forget_password">忘记密码</string>

    <!--    注册页面-->
    <string name="register2">注 册</string>
    <string name="ID">输入你的昵称</string>
    <string name="repeat_password">再次输入密码</string>


    <!--    我的页面-->
    <string name="collect">收 藏</string>
    <string name="my_order">我 的 订 单</string>
    <string name="logout">退 出 登 陆</string>
    <string name="ni_cheng">昵 称:</string>
    <string name="user_name_myfragment">账 号:</string>
    <string name="user_info_myfragment">个 人 信 息</string>
    <string name="setting">设 置</string>
    <string name="unedit">未填写</string>


    <string name="validatecode">短信验证码</string>
    <string name="sendcode">发送验证码</string>
    <string name="loginbymobile">手机号登陆</string>
    <string name="loginbypsd">密 码 登 陆</string>
    <string name="newpassword">请输入新密码</string>
    <string name="rememberpassword">记 住 密 码</string>
</resources>