<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:background="@color/white"
        android:id="@+id/register_topbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:elevation="1dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-16dp">
        <ImageView
            android:id="@+id/register_back"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:src="@drawable/back" />
    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/ico_logo_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_topbar" />

    <EditText
        android:id="@+id/user_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/edit_text_background"
        android:cursorVisible="true"
        android:hint="@string/username"
        android:paddingLeft="20dp"

        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textCursorDrawable="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/validatecode"
        android:cursorVisible="true"
        android:textCursorDrawable="@null"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/password"
        android:paddingLeft="20dp"

        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:password="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_phone"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/repeat_password"
        android:cursorVisible="true"
        android:textCursorDrawable="@null"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/repeat_password"

        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:password="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/validatecode"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/validateCode"
        android:cursorVisible="true"
        android:textCursorDrawable="@null"
        android:inputType="number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/validatecode"
        android:paddingLeft="20dp"

        android:paddingTop="10dp"
        android:paddingBottom="10dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repeat_password"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent=".8" />

    <Button
        android:id="@+id/register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button_background"
        android:hint="@string/register2"

        android:textColorHint="@color/white"
        android:textSize="16sp"

        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.92"
        app:layout_constraintWidth_percent=".8" />

    <Button
        android:id="@+id/sendValidateCode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sendcode"
        android:backgroundTint="@color/button_background"
        app:layout_constraintEnd_toEndOf="@+id/validateCode"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toBottomOf="@+id/validateCode" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="205dp" />

</androidx.constraintlayout.widget.ConstraintLayout>